# szl

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  circle.yml
src/: main.cpp  test_test.cpp
src/cmake/: compiler_definition_options.cmake  download_gtest.cmake  findDependencies.cmake  find_or_download_gtest.cmake  verbose_config.cmake
src/common/: CMakeLists.txt  szl.cpp  szl.h
src/examples/: daytime.cpp
src/tests/: CMakeLists.txt  test_test.cpp
src/tests/integration/: CMakeLists.txt  szl_thread.h
src/tests/unit/: CMakeLists.txt  szl_operation.cpp  szl_operation.h
